update composer json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "sayenkodesign/cadvisors",
+    "name": "sayenkodesign/theme",
+    "description": "Base theme for future projects.",
     "authors": [
         {
             "name": "Robert M. Parker",
