--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "sayenkodesign/theme",
     "description": "Base theme for future projects.",
+    "license": "MIT",
     "authors": [
         {
             "name": "Robert M. Parker",
