--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - vendor/bin/phpcs --config-set installed_paths vendor/escapestudios/symfony2-coding-standard
 
 script:
-  - vendor/bin/phpcs ./ --standard=Symfony2 --ignore=vendor/*,Tests/* -nps --colors
+  - vendor/bin/phpcs -ps --colors --standard=Symfony2 --ignore=vendor/*,Tests/* ./
 #  - phpunit --coverage-clover clover.xml
 
 notifications:
