--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 language: php
 
 php:
+  - '5.3'
+  - '5.4'
   - '5.5'
   - '5.6'
   - '7.0'
+  - 'hhvm'
 
 matrix:
   fast_finish: true
   allow_failures:
+    - php: 5.3
+    - php: 5.4
     - php: 7.0
     - php: hhvm
 
@@ -20,7 +25,7 @@ before_script:
 
 script:
   - vendor/bin/phpcs -ps --colors --standard=Symfony2 --ignore=vendor/*,Tests/*,App/ACF/* --extensions=php ./
-#  - phpunit --coverage-clover clover.xml
+  - phpunit --coverage-clover clover.xml
 
 notifications:
   - email: robert@sayenkodesign.com
