--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ php:
 matrix:
   fast_finish: true
   allow_failures:
-    - php: 5.3
-    - php: 5.4
-    - php: 7.0
-    - php: hhvm
+    - php: '5.3'
+    - php: '5.4'
+    - php: '7.0'
+    - php: 'hhvm'
 
 before_script:
   - composer self-update
