--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
         "symfony/config": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.24",
-        "whatthejeff/nyancat-phpunit-resultprinter": "~1.2"
+        "phpunit/phpunit": "^4.8.24"
     }
 }
