--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "twig/twig": "^1.24",
         "symfony/yaml": "^3.0",
         "symfony/dependency-injection": "^3.0",
-        "symfony/config": "^3.0"
+        "symfony/config": "^3.0",
+        "symfony/http-foundation": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.24"
