--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/yaml": "^3.0",
         "symfony/dependency-injection": "^3.0",
         "symfony/config": "^3.0",
+        "symfony/translation": "^3.0",
         "symfony/http-foundation": "^3.0"
     },
     "require-dev": {
