moved bower, gulp and npm around

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "sayenkodesign",
+  "name": "supertheme",
   "description": "",
   "main": "web/scripts/app.js",
   "authors": [
-    "Robert M. Parker <rparker@yamiko.ninja>"
+    "Robert M. Parker <robert@sayenkodesign.com>"
   ],
   "license": "MIT",
   "homepage": "http://sayenkodesign.com",
@@ -14,5 +14,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "font-awesome": "fontawesome#^4.6.3",
+    "foundation-sites": "^6.2.3"
+  }
 }
