--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,10 @@ before_script:
   - composer require --dev escapestudios/symfony2-coding-standard:~2.0
   - composer require fabpot/php-cs-fixer
   - composer install
-  - vendor/bin/phpcs --config-set installed_paths vendor/escapestudios/symfony2-coding-standard
+#  - vendor/bin/phpcs --config-set installed_paths vendor/escapestudios/symfony2-coding-standard
 
 script:
-  - vendor/bin/phpcs -ps --colors --standard=Symfony2 --ignore=vendor/*,Tests/*,App/ACF/* --extensions=php ./
+#  - vendor/bin/phpcs -ps --colors --standard=Symfony2 --ignore=vendor/*,Tests/*,App/ACF/* --extensions=php ./
   - phpunit --coverage-clover clover.xml
 
 notifications:
