--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/validator": "^3.0",
         "symfony/http-foundation": "^3.0",
         "symfony/security-csrf": "^3.0",
-        "symfony/security": "^3.0"
+        "symfony/security": "^3.0",
+        "symfony/filesystem": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.24"
