--- a/App/config/config.yml
+++ b/App/config/config.yml
@@ -1,14 +1,15 @@
 parameters:
   twig.paths:
     - "%template_dir%/views"
+    - "%template_dir%/src/views"
     - "%template_dir%/vendor/symfony/twig-bridge/Resources/views/Form"
   twig.options:
     debug:            "%WP_DEBUG%"
     charset:          "utf-8"
     cache:            "%template_dir%/var/twig"
     auto_reload:      "%WP_DEBUG%"
-    strict_variables: true
-    autoescape:       true
+    strict_variables: "%WP_DEBUG%"
+    autoescape:       false
     optimizations:    -1
 
 services:
