--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Supertheme\\": "src",
+            "Supertheme\\": "src/classes",
             "App\\": "app/src"
         }
     },
