--- a/App/config/config.yml
+++ b/App/config/config.yml
@@ -70,6 +70,13 @@ services:
   twig.form_extension:
     class: "Symfony\\Bridge\\Twig\\Extension\\FormExtension"
     arguments: ["@twig.form_renderer"]
+  twig.acf:
+    class: "Supertheme\\WordPress\\Twig\\ACF"
+  twig.wordpress:
+    class: "Supertheme\\WordPress\\Twig\\WordPRess"
+  twig.supertheme:
+    class: "Supertheme\\WordPress\\Twig\\SuperTheme"
+    arguments: ["@twig.acf", "@twig.wordpress"]
   twig.environment:
     class: "Twig_Environment"
     arguments: ["@twig.loader", "%twig.options%"]
@@ -77,3 +84,4 @@ services:
       - ["addExtension", ["@twig.debug"]]
       - ["addExtension", ["@twig.form_translation"]]
       - ["addExtension", ["@twig.form_extension"]]
+      - ["addGlobal", ["SP", "@twig.supertheme"]]
