--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/http-foundation": "^3.0",
         "symfony/security-csrf": "^3.0",
         "symfony/security": "^3.0",
-        "symfony/filesystem": "^3.1"
+        "symfony/filesystem": "^3.1",
+        "monolog/monolog": "^1.19"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.24"
