move translations to config file

--- a/App/config/config.yml
+++ b/App/config/config.yml
@@ -18,6 +18,7 @@ parameters:
     - "html5"
     - "post-thumbnails"
     - "custom-logo"
+  wordpress.translations: "%template_dir%/languages"
   wordpress.image_sizes:
     fullscreen: [1920, 1080, true]
   wordpress.menus:
