change Tests to tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 #  - vendor/bin/phpcs --config-set installed_paths vendor/escapestudios/symfony2-coding-standard
 
 script:
-#  - vendor/bin/phpcs -ps --colors --standard=Symfony2 --ignore=vendor/*,Tests/*,App/ACF/* --extensions=php ./
+#  - vendor/bin/phpcs -ps --colors --standard=Symfony2 --ignore=vendor/*,tests/*,App/ACF/* --extensions=php ./
   - phpunit --coverage-clover clover.xml
 
 notifications:
