--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <phpunit
-        bootstrap="./tests/bootstrap.php"
+        bootstrap="tests/bootstrap.php"
         processIsolation="true"
         stopOnFailure="false"
         convertErrorsToExceptions="true"
