--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2",
-    "gulp-watch": "^4.3.5"
+    "gulp-watch": "^4.3.5",
+    "gulp-newer": "^1.2.0"
+  },
+  "dependencies": {
   }
 }
