--- a/App/config/config.yml
+++ b/App/config/config.yml
@@ -14,6 +14,8 @@ parameters:
   logger.name: "SuperTheme"
   logger.path: "%template_dir%/var/logs.log"
   logger.level: "WARNING"
+  wordpress.acf_path: "%template_dir%/app/config/acf"
+  wordpress.acf_menu: true
   wordpress.theme_support:
     - "html5"
     - "post-thumbnails"
