--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Supertheme\\": "src/classes",
-            "App\\": "app/src"
+            "Supertheme\\": "app/src"
         }
     },
     "require": {
@@ -19,18 +18,13 @@
         "symfony/yaml": "^3.0",
         "symfony/dependency-injection": "^3.0",
         "symfony/config": "^3.0",
-        "symfony/form": "^3.0",
-        "symfony/twig-bridge": "^3.0",
-        "symfony/translation": "^3.0",
-        "symfony/validator": "^3.0",
         "symfony/http-foundation": "^3.0",
-        "symfony/security-csrf": "^3.0",
-        "symfony/security": "^3.0",
         "symfony/filesystem": "^3.1",
         "monolog/monolog": "^1.19",
-        "timber/timber": "^1.1"
+        "timber/timber": "^1.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.24"
+        "phpunit/phpunit": "^4.8.24",
+        "squizlabs/php_codesniffer": "^3.0"
     }
 }
