--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/http-foundation": "^3.0",
         "symfony/filesystem": "^3.1",
         "monolog/monolog": "^1.19",
-        "timber/timber": "^1.3"
+        "timber/timber": "1.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.24",
