updated package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sayenkodesign/theme",
+    "name": "sayenkodesign/supertheme",
     "description": "Base theme for future projects.",
     "license": "MIT",
     "authors": [
